Added a script installer for Redmine 0.8.3, thanks to Nick Orr.
Added buttons to the Manage SSL Certificate page to copy a domain's cert and key to Webmin or Usermin.
Added CPU and hard drive temperatures to the System Statistics page.
SpamAssassin's server filter spamd can now be activated from within Virtualmin, using a new button on the Spam and Virus Scanning page. You can also turn it on with the --enable-spamd flag to the set-spam API script.
After Virtualmin is installed and the master administrator logs in for the first time, a wizard allowing basic configuration of memory and speed tradeoffs will be displayed. This allows the system to be tuned for web, mail or database hosting, depending on how the admin intends it to be used.
ClamAV's server scanner clamd can now be enabled on FreeBSD from within Virtualmin.
Netmasks can now be optionally specified for IP allocation ranges, rather than being always inherited from the primary interface's netmask.
All backups made manually, on schedule or from the command line are now logged, and can be viewed using the new Backup Logs page.
Added a field to the script upgrade notification to limit warnings to only some virtual servers, or to exclude servers.
Moved the option for a secondary group for domain owners to the template level.
---- Changes since 3.69 ----
Updated the Piwik script installer to 0.2.37, Redmine to 0.8.4, SMF to 1.1.9, OpenGoo to 1.4, Squirrelmail to 1.4.19, Coppermine to 1.4.23, Magento to 1.3.1.1, phpMyFAQ to 2.0.14, and phpMyAdmin to 3.1.5.
Bandwidth usage by date or month can now be graphed for sub-servers.
Partially completed backups (where only some domains failed) are now shown in the backup logs.