@@ -1,0 +1,4 @@
+desc=Quota warning email customization
+html=The email to mailboxes who are approaching or over quota can now be customized on the Disk Quota Monitoring page.
+master=1
+link=edit_newquotas.cgi
