@@ -1117,3 +1117,4 @@ Moved the option for a secondary group for domain owners to the template level.
 Updated the Piwik script installer to 0.2.37, Redmine to 0.8.4, SMF to 1.1.9, OpenGoo to 1.4, Squirrelmail to 1.4.19, Coppermine to 1.4.23, Magento to 1.3.1.1, phpMyFAQ to 2.0.14, and phpMyAdmin to 3.1.5.
 Bandwidth usage by date or month can now be graphed for sub-servers.
 Partially completed backups (where only some domains failed) are now shown in the backup logs.
+The email to mailboxes who are approaching or over quota can now be customized on the Disk Quota Monitoring page.
